--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,17 +10,19 @@ jobs:
 
     strategy:
       matrix:
-        ruby: ['2.7', '3.0', '3.1', '3.2']
-        redmine: ['5.0-stable', '5.1-stable', 'master']
+        ruby: ['3.1', '3.2', '3.3', '3.4']
+        redmine: ['6.0-stable', 'master']
         db: ['postgres', 'mysql']
         exclude:
-          - ruby: '3.2'
-            redmine: 5.0-stable
+          - ruby: '3.1'
+            redmine: master
+          - ruby: '3.4'
+            redmine: 6.0-stable
       fail-fast: false
 
     services:
       postgres:
-        image: postgres:16
+        image: postgres:17
         env:
           POSTGRES_DB: redmine
           POSTGRES_USER: postgres
@@ -54,14 +56,14 @@ jobs:
         if: matrix.db == 'mysql'
 
       - name: Checkout Redmine
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           repository: redmine/redmine
           ref: ${{ matrix.redmine }}
           path: redmine
 
       - name: Checkout redmine_ref_issues
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           path: redmine/plugins/redmine_ref_issues
 
