--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,14 +10,9 @@ jobs:
 
     strategy:
       matrix:
-        ruby: ['3.1', '3.2', '3.3', '3.4']
-        redmine: ['6.0-stable', '6.1-stable', 'master']
+        ruby: ['3.2', '3.3', '3.4']
+        redmine: ['6.1-stable', 'master']
         db: ['postgres', 'mysql']
-        exclude:
-          - ruby: '3.1'
-            redmine: master
-          - ruby: '3.4'
-            redmine: 6.0-stable
       fail-fast: false
 
     services:
